Add note about futex2 to _fsync section
Like you told us, if you want to use futex2 you should set `_fsync="false", so I figured that should be added to the README now that you're providing futex2 in the community-patches

--- a/customization.cfg
+++ b/customization.cfg
@@ -116,6 +116,7 @@ _bcachefs=""
 _zfsfix=""
 
 # Set to "true" to enable support for fsync, an experimental replacement for esync found in Valve Proton 4.11+ - https://steamcommunity.com/games/221410/announcements/detail/2957094910196249305
+# NOTE: If using the futex2 patch, set this to "false" to avoid any weirdness. Requires a wine build with futex2 support.
 _fsync=""
 
 # Set to "true" to enable the Binder and Ashmem, the kernel modules required to use the android emulator Anbox.
